# HFMonitor

./: .gitignore  CMakeLists.txt  Doxyfile.in  DumpProcessor.hpp  FFTActionFindPeak.hpp  FiFiDAQ_main.cpp  README  RepackProcessor.hpp  broadcaster.hpp  check_running.sh  check_xml.sh  config.xml  config_DumpProcessor.xml  config_FFTProcessor.xml  fifi_control.cpp  fifi_control.hpp  functions.sh  get_git_version_string.sh  get_simd_compiler_flags.sh  get_svn_version_string.sh  libusb1.hpp  logging.hpp  main.dox  mat_spectrum_saver.hpp  pa_fft.hpp  perseus++.h  ps.m  run.hpp  setup.sh  start.sh  stop.sh  test.cpp
HFMonitor/: CMakeLists.txt  ClientFile.hpp  ClientFileWAVE.hpp  ClientTCP.hpp  DumpProcessor.hpp  FFT.hpp  FFTAction.cpp  FFTAction.hpp  FFTActionAverageDensity.hpp  FFTActionCalibrator.hpp  FFTActionFSKStrength.hpp  FFTActionFindPeak.hpp  FFTActionSpectrumInterval.hpp  FFTProcessor.hpp  FFTProxy.hpp  FFTResult.hpp  FFTResultCalibratedSpectrumPeak.hpp  FFTResultFSKStrength.hpp  FFTResultPowerSpectrumLine.hpp  FFTResultSpectrumPeak.hpp  FFTResultSpectrumPowerInInterval.hpp  Filter.hpp  IQBuffer.hpp  Makefile  NullProcessor.hpp  Raw2IQAdapter.hpp  RepackProcessor.hpp  Spectrum.hpp  WAVE.hpp  check_running.sh  config.xml  config_DumpProcessor.xml  config_FFTProcessor.xml  config_fifi_bc.xml  config_perseus.xml  config_server.xml  data_connection.hpp  fifi_control.hpp  functions.sh  get_svn_version_string.sh  (+30 more)
HFMonitor/CMake/modules/: FindFLTK.cmake  FindSqlite3.cmake
HFMonitor/Processing/Matlab/: make_plot__.m  make_plot_day.m
HFMonitor/config/: FFTProcessor.xml  config_perseus.xml  config_writer.xml  multi_client.xml  multi_client_BOS.xml  multi_client_HTV.xml  multi_client_KRK.xml  multi_client_MUN.xml  multi_client_STA.xml  multi_client_writer_KRK.xml  multi_client_writer_MUN.xml  multi_client_writer_NTZ.xml  multi_client_writer_NTZ_fromBOS.xml  multi_client_writer_NTZ_fromHTV.xml  multi_downconvert.xml  multi_downconvert_KRK.xml  perseus_server_HTV.xml  perseus_server_KRK.xml  perseus_server_NTZ.xml  perseus_server_TWN.xml
HFMonitor/config/DTD/: server.dtd
HFMonitor/config/perseus/: perseusds16v11.hex
HFMonitor/fx2_firmware/: Makefile  perseus.c
HFMonitor/include/: CUFFT.ipp  FFT.hpp  FFTProcessor.hpp  FFTProcessorToBC.hpp  FFTProcessorToFile.hpp  InvertMatrix.hpp  Spectrum.hpp  buffer.hpp  demod_alpha_processor.hpp  demod_fsk_processor.hpp  demod_msk_processor.hpp  gen_filename.hpp  logging.hpp  multi_downconvert_processor.hpp  processor.hpp  repack_buffer.hpp  repack_processor.hpp  run.hpp  shared_memory_mutex.hpp  tracking_goertzel_filter.hpp  tracking_goertzel_processor.hpp  writer.hpp
HFMonitor/include/FFTProcessor/: Action.hpp  Filter.hpp  Proxy.hpp  Result.hpp
HFMonitor/include/carrier_monitoring/: background_estimator.hpp  polynomial_interval_fit.hpp
HFMonitor/include/db/: sqlite3.hpp
HFMonitor/include/decode/: efr.hpp
HFMonitor/include/demod/: early_late_synch.hpp  msk.hpp
HFMonitor/include/filter/: fir.hpp  fir_filter.hpp  goertzel.hpp  iir.hpp  iir_design.hpp  pll.hpp  tracking_goertzel_filter.hpp
HFMonitor/include/gui/: spectrum_display.hpp
HFMonitor/include/libusb1.0/: libusb1.hpp
HFMonitor/include/network/: broadcaster.hpp  client.hpp  client_dump.hpp  client_iq.hpp  iq_adapter.hpp  multi_client.hpp  protocol.hpp
HFMonitor/include/processor/: IQBuffer.hpp  perseus.hpp  protocol.hpp  result.hpp  service.hpp
HFMonitor/include/service/: generic_iq.hpp
HFMonitor/include/wave/: definitions.hpp  reader.hpp  writer.hpp
HFMonitor/m/demod/: decode_rtcm.m  demod_msk.m  pll_init.m
HFMonitor/run/BOS/: 2a-multi_client_to_bc.in
HFMonitor/run/HTV/: 0-perseus_server.in
HFMonitor/run/KRK/: 0-perseus_server.in  0a-perseus_server.in  1a-client_multi_downconvert.in  1b-client_multi_reader.in  2a-multi_client_to_bc.in  4a-multi_client_writer.in
HFMonitor/run/NTZ/: 1b-multi_client_writer.in  2a-multi_client_to_file.in
HFMonitor/software/: Makefile
HFMonitor/src/: CMakeLists.txt  client_FFTtoBC_main.cpp  client_multi_downconvert_main.cpp  fltk_spec_main.cpp  multi_client_main.cpp  multi_client_to_broadcaster_main.cpp  multi_client_to_file_main.cpp  perseus_server_main.cpp  processor.cpp  save_datastream_main.cpp  server_ls_main.cpp
HFMonitor/src/FFTProcessor/: CMakeLists.txt
HFMonitor/src/libportaudio/: CMakeLists.txt  portaudio.cpp
HFMonitor/src/libusb1.0/: libusb1.cpp
HFMonitor/src/sdr/: CMakeLists.txt
HFMonitor/test/: testPGM_main.cpp  test_alpha_main.cpp  test_broadcaster_main.cpp  test_buffer_main.cpp  test_cal_main.cpp  test_carrier_monitor_main.cpp  test_clfft_main.cpp  test_client_FFTtoBC_main.cpp  test_client_FFTtoFile_main.cpp  test_fftw_main.cpp  test_fltk_main.cpp  test_fltk_spec_main.cpp  test_goertzel_main.cpp  test_iir_design_main.cpp  test_multi_client_main.cpp  test_ndb_main.cpp  test_polynomial_interval_fit_main.cpp  test_polynomial_regression_main.cpp  test_sqlite3_main.cpp  test_tgf_main.cpp
tags/HFMonitor_v2.1/: CMakeLists.txt  functions.sh
tags/HFMonitor_v2.1/config/: multi_client_HTV.xml  multi_client_KRK.xml  multi_client_NTZ.xml  multi_client_writer_KRK.xml  perseus_server_NTZ.xml
tags/HFMonitor_v2.1/include/: buffer.hpp  multi_downconvert_processor.hpp  processor.hpp
tags/HFMonitor_v2.1/src/: client_multi_downconvert_main.cpp
tags/HFMonitor_v2.1/test/: test_fir_main.cpp
tags/HFMonitor_v3.0/: CMakeLists.txt  display_spec.sh  functions.sh
tags/HFMonitor_v3.0/FiFiDAQ/: FFT.hpp  libusb1.cpp  pa_fft.hpp  wave_reader.hpp
tags/HFMonitor_v3.0/HFMonitor/: functions.sh
tags/HFMonitor_v3.0/PortAudio/: CMakeLists.txt
tags/HFMonitor_v3.0/include/: logging.hpp  (+3 more)
trunk/FiFiDAQ/: CMakeLists.txt  FFT.hpp  FiFiDAQ_main.cpp  IIR.hpp  IQBuffer.hpp  README.txt  Spectrum.hpp  costas.hpp  libusb1.hpp  libusb_test_main.cpp  pll.hpp  portaudio.cpp  portaudio.hpp  ps.m  service.hpp  service_generic_iq.hpp  test_costas_main.cpp  test_fir_main.cpp  test_iir_main.cpp  test_pll_main.cpp  test_wav_main.cpp  wave_reader.hpp
trunk/PortAudio/: CMakeLists.txt  portaudio.cpp  portaudio.hpp  portaudio_test_main.cpp
(+1681 files in other folders)
